--- a/memory/src/index.css
+++ b/memory/src/index.css
@@ -43,14 +43,16 @@ body {
 .photo-container{
   padding-left: 40px;
   width: 1100px;
-  display: block;
+  /* display: block; */
   margin-left: auto;
   margin-right: auto;
 }
 
 .photo{
-  width: 200px;
-  height: 200px;
-  margin: 40px;
+  width: 170px;
+  height: 170px;
+  margin: 25px;
+  border-style: solid;
+  display: inline-block;
 
 }
